--- a/infinity_server-ejb/pom.xml
+++ b/infinity_server-ejb/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.kevinsawicki</groupId>
+			<artifactId>http-request</artifactId>
+			<version>5.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
