--- a/infinity_server-web/pom.xml
+++ b/infinity_server-web/pom.xml
@@ -53,6 +53,16 @@
 			<artifactId>admin-theme</artifactId>
 			<version>${adminfaces.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.kevinsawicki</groupId>
+			<artifactId>http-request</artifactId>
+			<version>5.3</version>
+		</dependency>
+				<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
