Commit version 1 stable by Mdaghi

--- a/infinity_server-ear/pom.xml
+++ b/infinity_server-ear/pom.xml
@@ -32,6 +32,7 @@
 				<configuration>
 					<version>7</version>
 					<fileNameMapping>no-version</fileNameMapping>
+					<defaultLibBundleDir>lib</defaultLibBundleDir>
 				</configuration>
 			</plugin>
 			<plugin>
