marwa first commit

--- a/infinity_server-web/src/main/webapp/WEB-INF/web.xml
+++ b/infinity_server-web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
+  <context-param>
+	<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+	<param-value>true</param-value>
+</context-param>
    <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
